# Warehouse-Inventory-Management-System

./: Cargo.toml  README.MD  README.md  Warehouse.sln  build.bat  index.html  install-linux.sh  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  warehouse.service
Warehouse.Core/Attributes/: SQLPropertyAttribute.cs
Warehouse.Core/Constants/: ApplicationConfiguration.cs  ApplicationData.cs  CrashHandler.cs  Directories.cs  Files.cs
Warehouse.Data/: Warehouse.Data.csproj
Warehouse.Data/Constants/: ApplicationConfiguration.cs  ApplicationData.cs  CrashHandler.cs  Directories.cs  Files.cs
Warehouse.Data/Controllers/: FileSystemController.cs
Warehouse.Data/Models/: BuyerModel.cs  ContactModel.cs  LocationModel.cs  PurchaseOrderModel.cs  StatusModel.cs  VendorModel.cs
Warehouse.SQL/: DatabaseManager.cs  LocationManager.cs  ManagedDatabase.cs  PurchaseOrderManagedDatabase.cs  VendorManager.cs  Warehouse.SQL.csproj
Warehouse.Server/: Program.cs  Warehouse.Server.csproj  tsconfig.json
Warehouse.Server/Controllers/: ApplicationController.cs
Warehouse.Server/Controllers/Views/: ErrorController.cs  HomeController.cs  SettingsController.cs
Warehouse.Server/Data/: ApplicationConfiguration.cs  ApplicationData.cs  CrashHandler.cs  Directories.cs  Files.cs
Warehouse.Server/Pages/: Index.cshtml
Warehouse.Server/Pages/Shared/: _Layout.cshtml
Warehouse.Server/Properties/: launchSettings.json
Warehouse.Server/ViewComponents/: NavbarViewComponent.cs  PurchaseOrderItemComponent.cs  PurchaseOrderViewComponent.cs  SelectorViewComponent.cs  SettingsNavViewComponent.cs
Warehouse.Server/Views/Home/: Index.cshtml  Inventory.cshtml  Purchases.cshtml  Vendors.cshtml
Warehouse.Server/Views/Settings/: Account.cshtml  Index.cshtml
Warehouse.Server/Views/Shared/: Error.cshtml  _Layout.cshtml
Warehouse.Server/wwwroot/css/: calendar.css  calendar.css.map  content-page.css  content-page.css.map  dark.css  dark.css.map  input.css  input.css.map  light.css  light.css.map  main.css  main.css.map  nav.css  nav.css.map  page-form.css  page-form.css.map  scrollbar.css  scrollbar.css.map
Warehouse.Server/wwwroot/js/: calendar.js  calendar.js.map  inputs.js  (+21 more)
scripts/: app.js  publish.js
src/: main.tsx
src-actix/: authentication_endpoint.rs  constants.rs  main.rs
src-actix/authentication/: access_tokens.rs  authentication.rs  management.rs  validation.rs
src-actix/image_formater/: Cargo.toml
src-actix/image_formater/src/: conversion.rs  lib.rs  metadata.rs
(+89 files in other folders)
