workspace = { members = ["src-actix/image_formater"] }
[package]
name = "warehouse"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "warehouse"
path = "src-actix/main.rs"

[dependencies]
authentication = { path = "src-actix/authentication" }
image_formater = { path = "src-actix/image_formater" }
actix-web = { version = "4.9.0" }
actix-multipart = "0.7.2"
actix-ws = "0.3.0"
actix-files = "0.6.6"
futures-util = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125" }
env_logger = "0.11.5"
urlencoding = "2.1.3"

[build-dependencies]
cargo-watch = "8.5.2"
