[package]
name = "warehouse"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "warehouse"
path = "src-actix/main.rs"

[dependencies]
database-common-lib = {git="https://github.com/Mardens-Inc/database-common-lib.git"}
actix-web = { version = "4.9.0" }
actix-multipart = "0.7.2"
actix-ws = "0.3.0"
actix-files = "0.6.6"
futures-util = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125" }
env_logger = "0.11.5"
urlencoding = "2.1.3"
vite-actix = "0.1.2"
anyhow = "1.0.97"
thiserror = "2.0.12"
include_dir = "0.7.4"
reqwest = { version = "0.12.12", features = ["json"] }

sqlx = { version = "0.8.2", features = ["default", "mysql", "derive", "chrono", "runtime-tokio", "time", "runtime-tokio-rustls", "sqlx-mysql"] }
bcrypt = "0.17.0"
base64 = "0.22.1"
rand = "0.9.0-alpha.2"
log = "0.4.26"

[build-dependencies]
cargo-watch = "8.5.2"
