[package]
name = "image_formater"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsmpeg = { version = "0.15.1+ffmpeg.7.0" }

[package.metadata.vcpkg.ffmpeg]
dependencies = ["ffmpeg[avcodec,avformat,avfilter,avdevice,swresample,swscale,libpng,libwebp]:x64-windows-static-md"]
git = "https://github.com/microsoft/vcpkg"
rev = "a00ea19"
[package.metadata.vcpkg.libjpeg-turbo]
dependencies = ["libjpeg-turbo:x64-windows-static-md"]
git = "https://github.com/microsoft/vcpkg"
rev = "a00ea19"
[package.metadata.vcpkg.libpng]
dependencies = ["libpng:x64-windows-static-md"]
git = "https://github.com/microsoft/vcpkg"
rev = "a00ea19"
[package.metadata.vcpkg.libwebp]
dependencies = ["libwebp:x64-windows-static-md"]
git = "https://github.com/microsoft/vcpkg"
rev = "a00ea19"
